--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<title>Site 3INFD</title>
 </head>
 <body>
+   Site 3INFD
+   <ul>
+   	<li><a href="home.html">Home</a></li>
+   	<li><a href="sobre.html">Sobre</a></li>
+   	<li><a href="contato.html">Contato</a></li>
 
+   </ul>
 </body>
 </html>
